[package]
name = "zebra-consensus"
version = "0.1.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
futures = "0.3.5"
pin-project = "0.4"
rand = "0.7"
rand_core = "0.5.1"
tokio = { version = "0.2", features = ["net", "time", "stream"] }
tower = "0.3.1"

zebra-chain = { path = "../zebra-chain" }

[dev-dependencies]
proptest = "0.10"
proptest-derive = "0.2.0"
